--- a/html/about/goals.html
+++ b/html/about/goals.html
@@ -25,6 +25,7 @@
         <a href="../../index.html"><img src="../../images/logo.png" alt=""></a>
       </div>
       <nav>
+        <a href="../../index.html"><img src="../../images/logo.png" alt=""></a>
         <ul class="links">
           <li class="up"><a href="">عن المتحف 
               <ul class="section">
