--- a/html/about/goals.html
+++ b/html/about/goals.html
@@ -25,7 +25,7 @@
         <a href="../../index.html"><img src="../../images/logo.png" alt=""></a>
       </div>
       <nav>
-        <a href="../../index.html"><img src="../../images/logo.png" alt=""></a>
+         <i class="fa-solid fa-bars bar-menu  fa-3x"></i>
         <ul class="links">
           <li class="up"><a href="">عن المتحف 
               <ul class="section">
