Repair Some Errors

--- a/html/Sections/html-mummies/amnhotp_3.html
+++ b/html/Sections/html-mummies/amnhotp_3.html
@@ -116,7 +116,7 @@
               <a class="name" href="ahmos.html">أحمس</a>
             </div>
             <div class="box swiper-slide">
-              <a hreamnhotp_1.html"><img src="../../../images/museum-sectinn/mummies-hall/amnhotp_1.png" alt=""></a>
+              <a  href="amnhotp_1.html"><img src="../../../images/museum-sectinn/mummies-hall/amnhotp_1.png" alt=""></a>
               <a class="name" href="amnhotp_1.html">أمنحتب الأول</a>
             </div>
             <div class="box swiper-slide">
