Upload Some Editing

--- a/html/Sections/main-halll.html
+++ b/html/Sections/main-halll.html
@@ -36,7 +36,7 @@
               <li><a class="part" href="../about/museum-history.html">تاريخ المتحف</a></li>
             </ul>
           </li>
-          <li><a href="../vist.html">الزياة</a></li>
+          <li><a href="../vist.html">الزيارة</a></li>
           <li>
             <a class="up" href="">اقسام المتحف</a>
             <ul class="section">
