--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <li><a class="part" href="html/about/museum-history.html">تاريخ المتحف</a></li>
             </ul>
         </li>
-          <li><a href="html/vist.html">الزياة</a></li>
+          <li><a href="html/vist.html">الزيارة</a></li>
           <li>
             <a class="up" href="">اقسام المتحف</a>
             <ul class="section">
@@ -57,7 +57,9 @@
   </a>
   <!-- End Scroll Up Button -->
   <!-- Start landing section -->
-  <video src="images/landing.mp4" loop autoplay width="100%"></video>
+  <video loop autoplay width="100%">
+    <source src="images/landing.mp4"> 
+  </video>
   <!-- End landing section -->
   <!-- Start Imfio -->
   <section class="info">
