--- a/html/about/goals.html
+++ b/html/about/goals.html
@@ -25,7 +25,7 @@
         <a href="../../index.html"><img src="../../images/logo.png" alt=""></a>
       </div>
       <nav>
-         <i class="fa-solid fa-bars bar-menu  fa-3x"></i>
+        <i class="fa-solid fa-bars bar-menu  fa-3x"></i>
         <ul class="links">
           <li class="up"><a href="">عن المتحف 
               <ul class="section">
@@ -33,13 +33,13 @@
                 <li><a class="part" href="museum-history.html">تاريخ المتحف</a></li>
               </ul>
           </a></li>
-          <li><a href="../vist.html">الزياة</a></li>
+          <li><a href="../vist.html">الزيارة</a></li>
           <li><a class="up" href="">اقسام المتحف
             <ul class="section">
               <li><a href="../Sections/main-halll.html">القاعة الرئيسية</a></li>
               <li><a href="../Sections/mummies-hall.html">قاعة المومياوات</a></li>
               <li><a href="../Sections/laundry.html">المصبغة الأثرية</a></li>
-              <li><a href="../Sections/">التسلسل الزمنى للعصور التاريخية</a></li>
+              <li><a href="../Sections/historical-timeline.html">التسلسل الزمنى للعصور التاريخية</a></li>
             </ul> 
           </a></li>
         </ul>
