--- a/html/Sections/historical-timeline.html
+++ b/html/Sections/historical-timeline.html
@@ -10,11 +10,11 @@
   <link rel="stylesheet" href="../../css/all.min.css">
   <!-- mormalize css -->
   <link rel="stylesheet" href="../../css/mormalize.css">
+  <!-- AOS - Animate on scroll library -->
+  <link rel="stylesheet" href="../../css/aos.css">
   <!-- css file -->
   <link rel="stylesheet" href="../../css/main.css">
   <link rel="stylesheet" href="../../css/section.css">
-
-  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
   <!-- google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -466,6 +466,7 @@
     </div>
   </footer>
   <!-- End Footer -->
-  <script src="https://unpkg.com/aos@next/dist/aos.js "></script>
+  <!-- AOS - Animate on scroll library -->
+  <script src="../../js/aos.js"></script>
   <script src="../../js/main.js"></script>
 </html>
