--- a/html/Sections/html-mummies/amnhotp_2.html
+++ b/html/Sections/html-mummies/amnhotp_2.html
@@ -9,9 +9,9 @@
   <!-- fontes Awesome library-->
   <link rel="stylesheet" href="../../../css/all.min.css">
   <!-- mormalize css -->
-  <!-- Linke Swiper css -->
   <link rel="stylesheet" href="../../../css/mormalize.css">
-  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
+  <!-- Linke Swiper css -->
+  <link rel="stylesheet" href="../../../css/swiper-bundle.min.css">
   <!-- css file -->
   <link rel="stylesheet" href="../../../css/main.css">
   <link rel="stylesheet" href="../../../css/royal-mummies.css"> 
@@ -227,7 +227,7 @@
 <!-- End Footer -->
 
 <!-- Swiper JS -->
-<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+<script src="../../../js/swiper-bundle.min.js"></script>
 <!-- Initialize Swiper -->
 <script src=".././../../js/fade.js"></script>
 
