--- a/html/Sections/html-mummies/mernptah.html
+++ b/html/Sections/html-mummies/mernptah.html
@@ -11,7 +11,7 @@
   <!-- mormalize css -->
   <link rel="stylesheet" href="../../../css/mormalize.css">
   <!-- Linke Swiper css -->
-  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
+  <link rel="stylesheet" href="../../../css/swiper-bundle.min.css">
   <!-- css file -->
   <link rel="stylesheet" href="../../../css/main.css">
   <link rel="stylesheet" href="../../../css/royal-mummies.css"> 
@@ -213,7 +213,7 @@
 <!-- End Footer -->
 
 <!-- Swiper JS -->
-<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+<script src="../../../js/swiper-bundle.min.js"></script>
 <!-- Initialize Swiper -->
 <script src=".././../../js/fade.js"></script>
 </body>
