--- a/html/Sections/laundry.html
+++ b/html/Sections/laundry.html
@@ -10,9 +10,9 @@
   <link rel="stylesheet" href="../../css/all.min.css">
   <!-- mormalize css -->
   <link rel="stylesheet" href="../../css/mormalize.css">
-
-  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
-  <!-- css file -->
+  <!-- AOS - Animate on scroll library -->
+  <link rel="stylesheet" href="../../css/aos.css">
+    <!-- css file -->
   <link rel="stylesheet" href="../../css/main.css">
   <link rel="stylesheet" href="../../css/section.css">
   <!-- google fonts -->
@@ -120,6 +120,7 @@
     </div>
   </footer>
 <!-- End Footer -->
-<script src="https://unpkg.com/aos@next/dist/aos.js "></script>
-<script src="../../js/main.js"></script>
+  <!-- AOS - Animate on scroll library -->
+  <script src="../../js/aos.js"></script>
+  <script src="../../js/main.js"></script>
 </html>
