--- a/html/Sections/main-halll.html
+++ b/html/Sections/main-halll.html
@@ -126,7 +126,7 @@
     </div>
   </section>
     <!-- Start scrol-up -->
-    <<div class="scrol-up" >
+    <div class="scrol-up" >
       <a href="#head"><i class="fa-solid fa-angle-up"></i> </a>
     </div>
     <!-- End scrol-up -->
