--- a/html/Sections/mummies-hall.html
+++ b/html/Sections/mummies-hall.html
@@ -10,13 +10,13 @@
   <link rel="stylesheet" href="../../css/all.min.css">
   <!-- mormalize css -->
   <link rel="stylesheet" href="../../css/mormalize.css">
+  <!-- AOS - Animate on scroll library -->
+  <link rel="stylesheet" href="../../css/aos.css">
+  <!-- Linke Swiper css -->
+  <link rel="stylesheet" href="../../css/swiper-bundle.min.css"/>
   <!-- css file -->
   <link rel="stylesheet" href="../../css/main.css">
   <link rel="stylesheet" href="../../css/section.css">
-  <!-- Linke Swiper css -->
-  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
-  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-
   <!-- google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -236,9 +236,9 @@
   </footer>
   <!-- End Footer -->
   <!-- Swiper JS -->
-  <script src="https://unpkg.com/aos@next/dist/aos.js "></script>
-  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-  <!-- Initialize Swiper -->
+  <script src="../../js/swiper-bundle.min.js"></script>
+  <!-- AOS - Animate on scroll library -->
+  <script src="../../js/aos.js"></script>
   <script src="../../js/fade.js"></script>
   <script src="../../js/main.js"></script>
 </body>
