--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <link rel="stylesheet" href="css/all.min.css">
   <!-- Normalize css -->
   <link rel="stylesheet" href="css/mormalize.css">
+  <!-- AOS - Animate on scroll library -->
+  <link rel="stylesheet" href="css/aos.css">
   <!-- Css File -->
   <link rel="stylesheet" href="css/main.css">
 
-  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <!-- Google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -57,9 +58,11 @@
   </a>
   <!-- End Scroll Up Button -->
   <!-- Start landing section -->
-  <video loop autoplay width="100%">
-    <source src="images/landing.mp4"> 
-  </video>
+  <SECtion class="video">
+    <video autoplay="" muted="" width="100%" loop="">
+      <source src="video/landing.mp4" type="video/mp4">
+    </video>
+  </SECtion>
   <!-- End landing section -->
   <!-- Start Imfio -->
   <section class="info">
@@ -155,9 +158,24 @@
         </ul>
       </div>
     </div>
+    <div class="copyright">
+      <div class="container">
+        <div class="mysocial"> 
+          <a href="https://wsend.co/201019893766" target="_blank" class="whats"><i class="fab fa-whatsapp-square whats fa-2x"></i></a>
+          <a href="https://github.com/TahaAbdulrahmman" target="_blank" class="git"><i class="fab fa-github-square git fa-2x"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=100012525938175" target="_blank" class="face"><i class="fab fa-facebook-f face fa-2x"></i></a>
+        </div>
+        <p class="text">
+        Made With 
+          <i class="fa fa-heart c-main heart"></i> 
+          By Taha Abdulrahmman © 2022
+        </p>
+      </div>
+    </div>
   </footer>
   <!-- End Footer -->
-  <script src="https://unpkg.com/aos@next/dist/aos.js "></script>
+  <!-- AOS - Animate on scroll library -->
+  <script src="js/aos.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
