--- a/html/about/museum-history.html
+++ b/html/about/museum-history.html
@@ -33,13 +33,13 @@
                 <li><a class="part" href="museum-history.html">تاريخ المتحف</a></li>
               </ul>
           </a></li>
-          <li><a href="../vist.html">الزيارة</a></li>
+          <li><a href="../vist.html">الزياة</a></li>
           <li><a class="up" href="">اقسام المتحف
             <ul class="section">
               <li><a href="../Sections/main-halll.html">القاعة الرئيسية</a></li>
               <li><a href="../Sections/mummies-hall.html">قاعة المومياوات</a></li>
               <li><a href="../Sections/laundry.html">المصبغة الأثرية</a></li>
-              <li><a href="../Sections/historical-timeline.html">التسلسل الزمنى للعصور التاريخية</a></li>
+              <li><a href="../Sections/">التسلسل الزمنى للعصور التاريخية</a></li>
             </ul> 
           </a></li>
         </ul>
