--- a/html/Sections/html-mummies/ramses_4.html
+++ b/html/Sections/html-mummies/ramses_4.html
@@ -221,6 +221,20 @@
         </ul>
       </div>
     </div>
+    <div class="copyright">
+      <div class="container">
+        <div class="mysocial"> 
+          <a href="https://wsend.co/201019893766" target="_blank" class="whats"><i class="fab fa-whatsapp-square whats fa-2x"></i></a>
+          <a href="https://github.com/TahaAbdulrahmman" target="_blank" class="git"><i class="fab fa-github-square git fa-2x"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=100012525938175" target="_blank" class="face"><i class="fab fa-facebook-f face fa-2x"></i></a>
+        </div>
+        <p class="text">
+        Made With 
+          <i class="fa fa-heart c-main heart"></i> 
+          By Taha Abdulrahmman © 2022
+        </p>
+      </div>
+    </div>
   </footer>
 <!-- End Footer -->
 
